@startuml
skinparam linetype ortho
skinparam shadowing false
skinparam roundcorner 6
skinparam classFontSize 12
skinparam classFontName "Segoe UI, Arial"
skinparam classHeaderBackgroundColor #7C3AED
skinparam classHeaderFontColor #FFFFFF
skinparam classBorderColor #5B21B6
skinparam classBackgroundColor #F8FAFC
left to right direction

title SƠ ĐỒ ERD - NHÓM MARKETING & KHUYẾN MÃI

entity "banners (Banner quảng cáo)" as banners {
  * id : INT <<PK>>
  --
  title : VARCHAR(255)
  subtitle : VARCHAR(500)
  tag : VARCHAR(100)
  btn_text : VARCHAR(100)
  btn_url : VARCHAR(500)
  image : VARCHAR(255)
  sort_order : INT
  is_active : TINYINT(1)
}

entity "flash_sale_campaigns (Chiến dịch Flash Sale)" as flash_sale_campaigns {
  * id : INT <<PK>>
  --
  name : VARCHAR(255)
  start_time : DATETIME
  end_time : DATETIME
  status : ENUM('upcoming','active','ended')
  banner_image : VARCHAR(255)
}

entity "flash_sale_products (Sản phẩm Flash Sale)" as flash_sale_products {
  * id : INT <<PK>>
  --
  campaign_id : INT <<FK>>
  product_id : INT <<FK>>
  flash_price : DECIMAL(15,2)
  quantity_limit : INT
  sold_count : INT
  sort_order : INT
}

entity "products (Sản phẩm gốc)" as products {
  * id : INT <<PK>>
  --
  name : VARCHAR(255)
  price : DECIMAL(15,2)
}

entity "vouchers (Mã ưu đãi)" as vouchers {
  * id : INT <<PK>>
  --
  code : VARCHAR(50) <<UNIQUE>>
  discount_type : ENUM('percent','fixed')
  discount_value : DECIMAL(10,2)
  min_order_amount : DECIMAL(12,2)
  max_discount_amount : DECIMAL(12,2)
  usage_limit : INT
  used_count : INT
  start_date : DATETIME
  end_date : DATETIME
}

entity "voucher_usages (Lượt áp dụng)" as voucher_usages {
  * id : INT <<PK>>
  --
  voucher_id : INT <<FK>>
  user_id : INT <<FK>>
  order_id : INT <<FK>>
  discount_amount : DECIMAL(10,2)
  used_at : TIMESTAMP
}

entity "loyalty_points (Điểm thưởng thành viên)" as loyalty_points {
  * id : INT <<PK>>
  --
  user_id : INT <<FK>>
  order_id : INT <<FK>>
  points : INT
  type : ENUM('earn','redeem','bonus')
  description : VARCHAR(255)
  created_at : TIMESTAMP
}

entity "abandoned_carts (Cứu giỏ hàng)" as abandoned_carts {
  * id : INT <<PK>>
  --
  user_id : INT <<FK>>
  cart_total : DECIMAL(12,2)
  status : ENUM('active','recovered','contacted')
  reminder_count : INT
  last_reminder_at : DATETIME
}

flash_sale_campaigns ||--o{ flash_sale_products : "campaign_id"
products ||--o{ flash_sale_products : "product_id"
vouchers ||--o{ voucher_usages : "voucher_id"
@enduml